# dci-module-example

./: CMakeLists.txt
idl/: example.idl
src/: entry.cpp
